# Command-Finder

./: .coverage  .gitignore  AGENT.md  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh
shell/: cf.zsh
src/cf/: __init__.py  cli.py  config.py  db.py  embeddings.py  output.py  search.py  seed.py  selector.py
src/cf/data/commands/: compression.json  disk.json  docker.json  filesystem.json  git.json  macos.json  misc.json  networking.json  package_managers.json  perl_oneliners.json  permissions.json  process.json  search.json  system.json  text_processing.json
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_embeddings.py  test_output.py  test_search.py  test_seed.py  test_selector.py
